fix unclickable area for contracts dropdown on mobile

--- a/src/sass/app/components/contract.scss
+++ b/src/sass/app/components/contract.scss
@@ -66,6 +66,11 @@
                 left: 0;
                 border-bottom: 1px solid $COLOR_GRAY;
                 background: $COLOR_WHITE;
+                pointer-events: auto;
+
+                &.invisible {
+                    pointer-events: none;
+                }
             }
 
             span {
